--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ requests==2.32.3
 
 # Development and Testing
 pytest==7.4.3
+pytest-asyncio==0.21.1
 black==23.11.0
 
 # Security
@@ -37,3 +38,4 @@ passlib==1.7.4
 
 # Utilities
 PyYAML==6.0.2
+functools-lru-cache==1.0.3
