--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",  "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "build:skip-types": "vite build",
+    "build:skip-types": "vite build --mode production",
+    "build:render": "vite build --outDir dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
