--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "build:skip-types": "vite build --mode production",
-    "build:render": "vite build --outDir dist",
+    "build:render": "vite build --outDir dist --emptyOutDir",
     "lint": "eslint .",
     "preview": "vite preview"
   },
