--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "name": "smart-contract-rewriter-frontend",
   "private": true,
   "version": "1.0.0",
-  "type": "module",  "scripts": {
+  "type": "module",
+  "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "build:skip-types": "vite build --mode production",
@@ -11,33 +12,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@tanstack/react-query": "^5.64.0",
+    "@types/node": "^22.10.6",
+    "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.14",
+    "lucide-react": "^0.468.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.28.0",
-    "framer-motion": "^11.11.14",
-    "axios": "^1.7.9",
-    "lucide-react": "^0.468.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
-    "@tanstack/react-query": "^5.64.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.5",
-    "@types/node": "^22.10.6"
+    "react-router-dom": "^6.28.0",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "vite": "^6.3.5"
   }
 }
