fininshed the project

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-contract-rewriter-frontend",
+  "name": "solivolt-frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
