--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.0-flash-exp
 
 # Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/smart_contract_rewriter
+DATABASE_URL=postgresql://user:password@localhost:5432/solivolt
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_DB=smart_contract_rewriter
+POSTGRES_DB=solivolt
 
 # Web3 Configuration
 WEB3_PROVIDER_URL=https://mainnet.infura.io/v3/your_infura_project_id
@@ -46,5 +46,5 @@ GOOGLE_CLOUD_REGION=us-central1
 GOOGLE_CLOUD_SQL_INSTANCE=your_sql_instance_name
 
 # Docker Configuration
-COMPOSE_PROJECT_NAME=smart_contract_rewriter
+COMPOSE_PROJECT_NAME=solivolt
 DOCKERFILE_TARGET=production
