--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password123
-      POSTGRES_DB: smart_contract_rewriter
+      POSTGRES_DB: solivolt
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8"
     ports:
       - "5432:5432"
@@ -34,7 +34,7 @@ services:
       db:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://postgres:password123@db:5432/smart_contract_rewriter
+      DATABASE_URL: postgresql://postgres:password123@db:5432/solivolt
       GEMINI_API_KEY: ${GEMINI_API_KEY:-your_actual_gemini_api_key_here}
       SECRET_KEY: ${SECRET_KEY:-dev_secret_key_change_in_production}
       DEBUG: ${DEBUG:-true}
