--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -13,7 +13,7 @@ data:
   ALGORITHM: "HS256"
   ACCESS_TOKEN_EXPIRE_MINUTES: "30"
   ALLOWED_ORIGINS: "http://localhost:3000,http://127.0.0.1:3000"
-  APP_NAME: "Smart Contract Rewriter"
+  APP_NAME: "SoliVolt"
   APP_VERSION: "1.0.0"
   DEBUG: "true"
   LOG_LEVEL: "INFO"
