--- a/microservices/requirements.txt
+++ b/microservices/requirements.txt
@@ -26,6 +26,7 @@ py-solc-x==2.0.4
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.1.3
+PyJWT==2.8.0
 
 # Rate Limiting & Security
 slowapi==0.1.9
@@ -41,3 +42,4 @@ aiofiles==23.2.1
 
 # Monitoring (optional, can be removed for basic deployment)
 prometheus-client==0.19.0
+gunicorn==21.2.0
