--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "https://your-aws-ec2-ip:8000/api/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "frontend/dist/$1"
     }
@@ -17,5 +21,8 @@
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm install",
-  "framework": null
+  "framework": "vite",
+  "env": {
+    "VITE_API_URL": "https://your-aws-ec2-ip:8000"
+  }
 }
