--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,41 @@
-# Python
+# ==================================
+# 🔐 SECURITY & SENSITIVE DATA
+# ==================================
+# Never commit these files!
+.env
+.env.local
+.env.production
+.env.staging
+.env.test
+.env.prod
+*.env
+**/secrets/
+**/.secrets/
+private_keys/
+certificates/
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+secrets.yml
+
+# AWS & Cloud Credentials
+.aws/
+credentials
+config
+*.credentials
+
+# Database dumps & backups
+*.sql
+*.dump
+*.backup
+backup/
+dumps/
+
+# ==================================
+# 🐍 PYTHON
+# ==================================
 __pycache__/
 *.py[cod]
 *$py.class
@@ -34,8 +71,6 @@ wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a script, but they may be committed by
-#  accident.
 *.manifest
 *.spec
 
@@ -55,10 +90,8 @@ htmlcov/
 # Translations
 *.mo
 *.pot
-*.log
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -93,20 +126,25 @@ celerybeat.pid
 # SageMath files
 *.sage.py
 
-# Environments
-.env
-.env.test
-.env.prod
+# ==================================
+# 📦 NODE.JS & NPM
+# ==================================
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# Docker
+# ==================================
+# 🐳 DOCKER & CONTAINERS
+# ==================================
 .dockerignore
 Dockerfile*
 
-# node.js (often used for frontend build tools)
-node_modules/
-dist/
-
-# IDEs and editors
+# ==================================
+# 💻 IDEs AND EDITORS
+# ==================================
 .idea/
 .vscode/*
 !.vscode/settings.json
@@ -116,30 +154,56 @@ dist/
 *.sublime-project
 *.sublime-workspace
 
-# OS generated files
+# ==================================
+# 🖥️ OPERATING SYSTEMS
+# ==================================
+# macOS
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
+
+# Windows
 Thumbs.db
 ehthumbs.db
 Desktop.ini
 
-# Temporary files
+# ==================================
+# 📋 LOGS & TEMPORARY FILES
+# ==================================
+logs/
+*.log
 *.tmp
 *.bak
 *.swp
 *~
 
-# Secrets (example, be careful with real secrets)
-secrets.yml
-*.pem
-*.key
-
-# Log files
-logs/
-*.log
-
 # Local History files (for some editors)
 .history/
+
+# ==================================
+# ☁️ CLOUD & INFRASTRUCTURE
+# ==================================
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+terraform.tfvars.json
+
+# Kubernetes
+kubeconfig
+*.kubeconfig
+
+# ==================================
+# 📊 MONITORING & METRICS
+# ==================================
+# Prometheus data
+prometheus-data/
+alertmanager-data/
+
+# Grafana
+grafana-data/
+grafana.db
