feat: Initialize Terraform configuration for Smart Contract Rewriter
- Added bootstrap configuration for S3 backend and DynamoDB state locking.
- Created main Terraform configuration with modules for VPC, EC2, RDS, and S3.
- Implemented VPC module with resources for VPC, subnets, NAT gateways, and route tables.
- Defined outputs for VPC module including IDs and ARNs.
- Established variable definitions for project configuration, network, EC2, RDS, and security settings.
- Added outputs for infrastructure components including EC2 instances, RDS, and S3 bucket details.

--- a/.gitignore
+++ b/.gitignore
@@ -205,6 +205,13 @@ logs/
 .terraform.lock.hcl
 terraform.tfvars
 terraform.tfvars.json
+*.tfplan
+terraform-*.tfplan
+
+# Terraform security and cost reports
+security-report.json
+checkov-report.json
+cost-estimate.json
 
 # AWS S3 Policies and Infrastructure Configs
 s3-bucket-policy.json
@@ -216,7 +223,6 @@ s3-lifecycle-policy.json
 vercel.json
 render.yaml
 infrastructure/
-terraform/
 
 # Kubernetes
 kubeconfig
