feat(ai-service): Enhance AI service to prioritize OpenAI with Gemini as fallback and update environment configuration

--- a/microservices/.env.example
+++ b/microservices/.env.example
@@ -13,8 +13,11 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# Gemini AI Configuration
+# AI API Configuration
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4
 GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-1.5-flash
 
 # Email Configuration
 SMTP_SERVER=smtp.gmail.com
