--- a/microservices/ai-service/requirements.txt
+++ b/microservices/ai-service/requirements.txt
@@ -1,6 +1,7 @@
 # AI Service Requirements
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+openai==1.3.7
 google-generativeai==0.3.2
 redis==5.0.1
 pydantic==2.5.0
